--- a/app/src/main/res/layout/activity_fullscreen.xml
+++ b/app/src/main/res/layout/activity_fullscreen.xml
@@ -40,6 +40,13 @@
                 android:layout_weight="1" android:text="@string/dummy_button" />
 
         </LinearLayout>
+
+        <com.google.vrtoolkit.cardboard.CardboardView
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:id="@+id/cardboard_view"
+            android:layout_gravity="center" />
+
     </FrameLayout>
 
 </FrameLayout>
